scraper/tests/trybuild/no_detached_redfish_command.stderr
error[E0425]: cannot find value `fetch_arbitrary_resource` in module `nv_redfish_scraper::adapter::redfish`
  --> tests/trybuild/no_detached_redfish_command.rs:10:51
   |
10 |     let _ = nv_redfish_scraper::adapter::redfish::fetch_arbitrary_resource;
   |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `nv_redfish_scraper::adapter::redfish`
